<resources>
    <string name="app_name">My Meet</string>
    <string name="add_meeting">Add Meeting</string>
    <string name="room">Room</string>
    <string name="_1">1</string>
    <string name="subject">Subject</string>
    <string name="participants">Participants</string>
    <string name="remove_meeting">Remove meeting</string>
    <string name="room_color">Room color</string>
    <string name="_29_11_1990">29/11/1990</string>
    <string name="_10h55">10h55</string>
    <string name="participant_email">jeremy.dufeux@gmail.com</string>
    <string name="remove_participant">Remove participant</string>
    <string name="add_participant">Add participant</string>
    <string name="your_meeting_will_take_place_in">Your meeting will take place in</string>
    <string name="participant_e_mail">Participant e-mail</string>
    <string name="room_2">room 2</string>
    <string name="duration">Duration</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="_01_00">01:00</string>
    <string name="two_dot">:</string>
    <string name="select_meeting_duration">Select meeting duration</string>
    <string name="title">Title</string>
    <string name="add_at_least_two_participants">Add at least two participants :</string>
    <string name="participants_list">Participants list :</string>
    <string name="toast_email_field">Please enter an email in the field</string>
    <string name="save">Save</string>
    <string name="edit_meeting_title">Edit meeting</string>
    <string name="add_meeting_title">Add meeting</string>
    <string name="select_a_meeting_room">Select a meeting room :</string>
    <string name="available_text">This room is available for this slot</string>
    <string name="not_available_text">This room is not available for this slot</string>
    <string name="availability_status">Availability status</string>
    <string name="fill_all_fields_message">Please fill all fields</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="discard_dialog_message">Do you want to discard changes?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="filter">Filter</string>
    <string name="filter_dialog_title">Select dates or rooms to filter :</string>
    <string name="select_date">Select date :</string>
    <string name="select_rooms">Select rooms :</string>
    <string name="all">All</string>
    <string name="clear_filters">Clear filters</string>
    <string name="_10_30_12_00">10:30 AM – 13:00 PM</string>
    <string name="toast_email_in_the_list">This participant is already in the list</string>
</resources>